--- a/Postapp/views/login.ejs
+++ b/Postapp/views/login.ejs
@@ -11,13 +11,13 @@
       <h1 class="text-4xl font-bold text-center text-white p-4">Login</h1>
       <form action="/login" method="POST" class="flex flex-col items-center">
         <input
-          type="text"
+          type="email"
           name="email"
           placeholder="Email"
           class="w-3/5 p-2 m-2 rounded-md bg-zinc-800"
         />
         <input
-          type="text"
+          type="password"
           name="password"
           placeholder="Password"
           class="w-3/5 p-2 m-2 rounded-md bg-zinc-800"
@@ -28,6 +28,11 @@
           class="w-3/5 p-2 m-2 rounded-md bg-blue-500 hover:bg-blue-600 cursor-pointer"
         />
       </form>
+      <a
+        class="text-white p-4 underline text-center block mt-4 font-semibold hover:text-cyan-400 hover:underline hover:text-lg"
+        href="/"
+        >Register</a
+      >
     </div>
   </body>
 </html>
