--- a/Useraccount/views/login.ejs
+++ b/Useraccount/views/login.ejs
@@ -221,7 +221,7 @@
         <p>
           Don't have an account?
           <a
-            href="/register"
+            href="/"
             class="text-yellow-400 hover:text-yellow-300 font-medium transition-colors ml-1"
             >Create account</a
           >
